--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,4 @@ production:
   database: freemarket_sample_66i_production
   username: freemarket_sample_66i
   password: <%= ENV['FREEMARKET_SAMPLE_66I_DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
