デプロイ変更

--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,5 @@ production:
   <<: *default
   database: freemarket_sample_66i_production
   username: freemarket_sample_66i
-  password: <%= ENV['FREEMARKET_SAMPLE_66I_DATABASE_PASSWORD'] %>
+  password: 
   socket: /var/lib/mysql/mysql.sock
