--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,6 @@ test:
 production:
   <<: *default
   database: freemarket_sample_66i_production
-  username: freemarket_sample_66i
+  username: root
   password: 
   socket: /var/lib/mysql/mysql.sock
