--- a/config/database.yml
+++ b/config/database.yml
@@ -51,7 +51,7 @@ production:
   <<: *default
   database: freemarket_sample_66i_production
   username: root
-  password: 
+  password: pass0908
   socket: /var/lib/mysql/mysql.sock
 
   
