--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,5 @@ production:
   <<: *default
   database: freemarket_sample_66i_production
   username: root
-  password: pass0908
+  password: <%= Rails.application.credentials[:db][:DATABASE_PASSWORD] %>
   socket: /var/lib/mysql/mysql.sock
